# cellpack

./: .buildinfo  .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  INSTALL.html  LICENSE  MANIFEST.in  Makefile  README.md  RECIPE_SCHEMA.html  batch_test.py  cellpack.autopack.Ingredient.html  cellpack.autopack.html  cellpack.autopack.ingredient.html  cellpack.autopack.interface_objects.html  cellpack.autopack.loaders.html  cellpack.autopack.upy.dejavuTk.html  cellpack.autopack.upy.html  cellpack.autopack.upy.simularium.html  cellpack.autopack.writers.html  cellpack.bin.html  cellpack.html  cellpack.mgl_tools.DejaVu.Tests.html  cellpack.mgl_tools.DejaVu.VisionInterface.Tests.html  cellpack.mgl_tools.DejaVu.VisionInterface.html  cellpack.mgl_tools.DejaVu.doc.Tutorial.html  cellpack.mgl_tools.DejaVu.doc.html  cellpack.mgl_tools.DejaVu.gui.html  cellpack.mgl_tools.DejaVu.html  cellpack.mgl_tools.DejaVu.materialsDef.html  cellpack.mgl_tools.DejaVu.scenarioInterface.Tests.html  cellpack.mgl_tools.DejaVu.scenarioInterface.html  cellpack.mgl_tools.RAPID.Tests.html  cellpack.mgl_tools.RAPID.html  cellpack.mgl_tools.Support.html  cellpack.mgl_tools.bhtree.Tests.html  cellpack.mgl_tools.bhtree.html  cellpack.mgl_tools.geomutils.Tests.Data.html  cellpack.mgl_tools.geomutils.Tests.html  (+80 more)
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: add-issue-to-project.yml  analyze.yml  build-docs.yml  build-main.yml  cache-dependencies.yml  ci.yml  clean-old-s3-files.yml  cleanup-aws.yml  cleanup-firebase.yml  cleanup.yml  docker-build.yml  make-requirements.yml  test-and-lint.yml
_modules/: cellpack.html  index.html
_modules/cellpack/: autopack.html  example.html
_sources/: RECIPE_SCHEMA.md.txt  cellpack.autopack.Ingredient.rst.txt  cellpack.autopack.ingredient.rst.txt  cellpack.autopack.interface_objects.rst.txt  cellpack.autopack.loaders.rst.txt  cellpack.autopack.rst.txt  cellpack.autopack.upy.dejavuTk.rst.txt  cellpack.autopack.upy.rst.txt  cellpack.autopack.upy.simularium.rst.txt  cellpack.autopack.writers.rst.txt  cellpack.bin.rst.txt  cellpack.mgl_tools.DejaVu.Tests.rst.txt  cellpack.mgl_tools.DejaVu.VisionInterface.Tests.rst.txt  cellpack.mgl_tools.DejaVu.VisionInterface.rst.txt  cellpack.mgl_tools.DejaVu.doc.Tutorial.rst.txt  cellpack.mgl_tools.DejaVu.doc.rst.txt  cellpack.mgl_tools.DejaVu.gui.rst.txt  cellpack.mgl_tools.DejaVu.materialsDef.rst.txt  cellpack.mgl_tools.DejaVu.rst.txt  cellpack.mgl_tools.DejaVu.scenarioInterface.Tests.rst.txt  cellpack.mgl_tools.DejaVu.scenarioInterface.rst.txt  cellpack.mgl_tools.RAPID.Tests.rst.txt  cellpack.mgl_tools.RAPID.rst.txt  cellpack.mgl_tools.Support.rst.txt  cellpack.mgl_tools.bhtree.Tests.rst.txt  cellpack.mgl_tools.bhtree.rst.txt  cellpack.mgl_tools.geomutils.Tests.Data.rst.txt  cellpack.mgl_tools.geomutils.Tests.rst.txt  cellpack.mgl_tools.geomutils.rst.txt  cellpack.mgl_tools.mglutil.TestUtil.Tests.Data.rst.txt  cellpack.mgl_tools.mglutil.TestUtil.Tests.rst.txt  cellpack.mgl_tools.mglutil.TestUtil.rst.txt  cellpack.mgl_tools.mglutil.Tests.rst.txt  cellpack.mgl_tools.mglutil.gui.BasicWidgets.Tk.Tests.rst.txt  cellpack.mgl_tools.mglutil.gui.BasicWidgets.Tk.TreeWidget.Tests.rst.txt  cellpack.mgl_tools.mglutil.gui.BasicWidgets.Tk.TreeWidget.icons.rst.txt  cellpack.mgl_tools.mglutil.gui.BasicWidgets.Tk.TreeWidget.rst.txt  cellpack.mgl_tools.mglutil.gui.BasicWidgets.Tk.rst.txt  cellpack.mgl_tools.mglutil.gui.BasicWidgets.Tk.trees.rst.txt  cellpack.mgl_tools.mglutil.gui.BasicWidgets.rst.txt  (+52 more)
analysis-configs/: gradient_analysis_config.json  peroxisomes_analysis_config.json
cellpack/: __init__.py  logging.conf
cellpack/analysis-configs/: peroxisomes_analysis_config.json
cellpack/autopack/: AWSHandler.py  Analysis.py  BaseGrid.py  BaseIngredient.py  Compartment.py  DBHandler.py  DBRecipeHandler.py  Environment.py  FirebaseHandler.py  GeometryTools.py  Gradient.py  Graphics.py  Grid.py  IOutils.py  Ingredient.py  MeshStore.py  OutputSimularium.py  Recipe.py  Serializable.py  __init__.py  binvox_rw.py  firebase.py  iotools_simple.py  ldSequence.py  octree.py  plotly_result.py  randomRot.py  ray.py  representations.py  trajectory.py  transformation.py  utils.py
cellpack/mgl_tools/: __init__.py
cellpack/test-analysis/: analysis.ipynb
cellpack/test-recipes/: NM_Analysis_FigureA1.0.json  NM_Analysis_FigureA1.0.xml  NM_Analysis_FigureB1.0.json  NM_Analysis_FigureB1.1.json  NM_Analysis_FigureC1.json  one_cube.json  one_sphere.json  oriented_cube.json  oriented_cube_sphere.json  oriented_cuboid.json  partner_packing.json  rotated_cube.json  rotated_cube_sphere.json  rotated_cuboid.json  sphere_tree.json  test.sph  test_compartment.json  test_containment.json  test_cylinder.json  test_grow.json  test_jitter_jitter.json  test_jitter_jitter_sparse.json  test_rotated_cuboid.json  test_sphere_tree.json
cellpack/tests/: __init__.py  test_aws_handler.py  test_comp_doc.py  test_config.py  test_data_doc.py  test_db_handler.py  test_db_recipe_handler.py  test_db_recipe_loader.py  test_db_uploader.py  test_env.py  test_firebase_upload.py  test_function.py  test_gradient_data.py  test_gradient_doc.py  test_ingredient.py  test_markdown_writer.py  test_object_doc.py  test_pack_cli.py  test_packings.py  test_partners.py  test_recipe_loader.py  test_recipe_resolve.py  test_recipe_version_migration.py  test_representations.py
docker/: Dockerfile.batch  Dockerfile.ecs  entrypoint-batch.sh  entrypoint-ecs.sh  server.py
docs/: CLIENT_SITE.md  CONFIG_SCHEMA.md  CONTRIBUTING.md  DOCKER.md  INSTALL.md  INSTALLATION.md  Makefile  RECIPE_AND_CONFIG_SCHEMA.md  RECIPE_SCHEMA.md  RECIPE_SCHEMA_2.0.md  REMOTE_DATABASES.md  STUDIO_SITE.md  conf.py  contributing.md  contributing.rst  docker.rst  index.md  index.rst  installation.rst  make.bat  modules.rst  pdm.md  recipe-schema.rst  remote_databases.rst
packing-configs/: analyze_pex_packing.json  config.json  debug-config.json  debug.json  peroxisome_packing_config.json  run-config.json  run.json  sparse-packing.json
(+848 files in other folders)
