[project]
name = "cellpack"
version = "v1.1.1"
description = "algorithm to pack molecular recipes"
keywords = ["cellpack"]
readme = "README.md"
authors = [
    {name = "Megan Riel-Mehan", email = "meganr@alleninstitute.org"},
    {name = "Saurabh Mogre", email = "saurabh.mogre@alleninstitute.org"},
    {name = "Ruge Li", email = "ruge.li@alleninstitute.org"},
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.11",
]
requires-python = "~=3.11.0"
dependencies = [
    "aicsimageio",
    "boto3",
    "deepdiff",
    "fire",
    "firebase-admin",
    "grpcio",
    "matplotlib",
    "numpy",
    "pandas",
    "plotly",
    "pycollada",
    "pymunk",
    "python-dotenv",
    "rtree",
    "scipy",
    "simulariumio",
    "tqdm",
    "trimesh",
]
license = {text = "MIT license"}

[project.urls]
Homepage = "https://github.com/mesoscope/cellpack"

[project.scripts]
analyze = "cellpack.bin.analyze:main"
convert = "cellpack.bin.simularium_converter:main"
pack = "cellpack.bin.pack:main"
upload = "cellpack.bin.upload:main"
clean = "cellpack.bin.clean:main"
validate = "cellpack.bin.validate:main"

[dependency-groups]
dev = [
    "Sphinx",
    "coverage",
    "ipython",
    "ipykernel",
    "sphinx-rtd-theme",
    "tox",
    "wheel",
    "bumpver",
    "docutils",
]
test = [
    "moto",
    "pytest",
    "pytest-cov",
    "pytest-raises",
]
lint = [
    "black",
    "flake8-debugger",
    "flake8",
    "docutils",
]
docs = [
    "mdutils",
    "linkify-it-py",
    "myst-parser",
]

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"

[tool.uv]
default-groups = ["dev", "lint", "test", "docs"]
cache-dir = ".cache/uv"
package = true

[tool.uv.build-backend]
module-root = ""
source-include = [
    "cellpack",
    "docker",
    "docs",
    "examples",
    "requirements",
    ".dockerignore",
    "tests",
    "__init__.py",
    ".gitignore",
    ".python-version",
    "LICENSE",
    "Makefile",
    "pyproject.toml",
    "README.md",
    "uv.lock"
]
source-exclude = [
    ".env",
    ".git",
    ".github",
    ".ipynb_checkments",
    ".mypy_cache",
    "__pycache__",
    ".cache",
    ".pytest_cache",
    ".ruff_cache",
    ".tox",
    ".venv",
    ".vscode",
    "out",
]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 88
ignore = [
    "E203",
    "E402",
    "E501",
    "E721",
    "W291",
    "W503",
]